--- a/src/app/pages/portafolio/portafolio.component.html
+++ b/src/app/pages/portafolio/portafolio.component.html
@@ -28,13 +28,15 @@
     
 
 
-    <div class="ae-masonry ae-masonry-md-2 ae-masonry-xl-4">
-      <a routerLink="/item" *ngFor="let producto of _productosServ.productos" class="animated fadeIn rk-item ae-masonry__item">
-        <img src="assets/productos/{{producto.url}}.jpg" alt="">
-        <div class="item-meta">
-          <h2>{{ producto.titulo }}</h2>
-          <p> {{ producto.categoria }}} </p>
-        </div>
-      </a>
-    </div>
+<div *ngIf="!_productosServ.cargando" 
+class="ae-masonry ae-masonry-md-2 ae-masonry-xl-4">
+<a *ngFor="let producto of _productosServ.productos" 
+  [routerLink]="['/item', producto.cod]" class="animated fadeIn rk-item ae-masonry__item">
+  <img src="assets/productos/{{producto.url}}.jpg" alt="">
+  <div class="item-meta" [routerLink]="['/item', producto.cod]">
+    <h2>{{ producto.titulo }}</h2>
+    <p> {{ producto.categoria }} </p>
+  </div>
+</a>
+</div>
   </section>
